# rut-server-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml
migrations/2019-02-28-012731_alter_1/: up.sql
migrations/2019-02-28-040942_init/: up.sql
migrations/2019-03-04-032436_re_init/: up.sql
migrations/2019-03-05-082319_init/: down.sql  up.sql
migrations/2019-03-18-020942_new_col_user/: up.sql
migrations/2019-04-18-193529_slug/: up.sql
migrations/2019-06-19-232536_add_permission/: up.sql
migrations/2019-08-21-162611_tag_at/: up.sql
src/: errors.rs  main.rs  router.rs  schema.rs
src/api/: auth.rs  etc.rs  index.rs  item.rs  mod.rs  rut.rs  tag.rs
src/bot/: mod.rs
src/db/: dba.rs  etc.rs  item.rs  mod.rs  msg.rs  rut.rs  schema.rs  tag.rs  user.rs
src/handler/: etc.rs  item.rs  mod.rs  rut.rs  tag.rs  user.rs
src/model/: etc.rs  item.rs  mod.rs  msg.rs  rut.rs  tag.rs  user.rs
src/util/: mod.rs  share.rs
src/utils/: mod.rs
static/: 404.html  index.html  manifest.json  precache-manifest.11161ae7375e3c77402f9459ca4b50c8.js  precache-manifest.299485cfc3d23d2b23018ce236822f54.js  precache-manifest.47564c09ef4d6646d566b0e9a25e6089.js  precache-manifest.a13c48a0645edd30da0ffbf71ebadcc0.js  precache-manifest.b052e9b1664bb4c2cfc610c88916a185.js  precache-manifest.d2fc5d42e8556003bf42845afa74497a.js  service-worker.js
static/css/: app.80a1ba2b.css  chunk-07904ab9.cc20eddf.css  chunk-09b6ce84.231de251.css  chunk-12f794ea.5da7a927.css  chunk-13300983.5bf466c3.css  chunk-1be64b06.3da6bb7f.css  chunk-1ffc33e0.605bebab.css  chunk-2a7ae24d.96d16136.css  chunk-32a200b3.1de2c35b.css  chunk-3a6d9638.993cce70.css  chunk-3a97e886.f9dcd98d.css  chunk-3b0c6194.986b5059.css  chunk-46abd30c.4e6131eb.css  chunk-486a8857.37f48c39.css  chunk-5194b7a3.24b67e42.css  chunk-530f6138.7a7ddd8e.css  chunk-5b461262.57a00bcd.css  chunk-5d3fee05.662449ce.css  chunk-607419b4.704be95e.css  chunk-68236a1f.7810bec6.css  chunk-72ea2528.cae7e1b2.css  chunk-737f4ed6.adb94cf5.css  chunk-773f306a.77d536bb.css  chunk-79461b30.6367acd6.css  chunk-7a2f9de1.6f4b2098.css  chunk-7ab45635.aec1fbdf.css  chunk-7e287dee.f5dc99fc.css  chunk-7f79152c.f39d81e4.css  chunk-8ad230a6.568b3681.css  chunk-98583078.a8a74f0d.css  chunk-a6f45aac.d1da1d7b.css  chunk-abcbe986.65cc780f.css  chunk-b9fea93c.425e0344.css  chunk-bb6391f2.4ff04ba5.css  chunk-c5ebe236.46b8ed9f.css  chunk-c7bc7dbc.c3c457b8.css  chunk-ca6d536e.7144f4d7.css  chunk-d7d4474c.e7daacf3.css  chunk-dc00a0a6.2c6e9d77.css  (+3 more)
(+134 files in other folders)
