[package]
name = "rut-server-rust"
version = "0.0.3"
edition = "2018"
authors = ["DLuo"]

[[test]]
name = "tests"
path = "tests/lib.rs"

[dependencies]
futures = "0.1.27"
actix = "0.8.2"
actix-rt = "0.2.2"
actix-web = "1.0.0-rc"
diesel = { version = "1.4.2", features = ["postgres","chrono","serde_json","uuidv07","r2d2"] }
r2d2 = "0.8.4"
serde_derive="1.0.91"
serde_json="1.0.39"
serde="1.0.91"
jsonwebtoken = "6.0.1" 

derive_more = "0.14"
regex = "1.1.6"
lazy_static = "1.3.0"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
deunicode = "1.0.0"
bcrypt = "0.4.0"
chrono = { version = "0.4.6", features = ["serde"] }
log = "0.4.6"
fern = "0.5.8"
dotenv = "0.14.1"
base64 = "0.10.1"
num_cpus = "1.10.0"

reqwest = "0.9.17"
scraper = "0.10.0"

# openssl = "0.10.20"
