[package]
name = "rut-server-rust"
version = "0.1.0"
edition = "2018"
authors = ["DLuo"]

[[test]]
name = "tests"
path = "tests/lib.rs"

[dependencies]
futures = "0.1.28"
actix = "0.8.3"
actix-rt = "0.2.4"
actix-web = "1.0.7"
actix-cors = "0.1.0"
diesel = { version = "1.4.2", features = ["postgres","chrono","serde_json","uuidv07","r2d2"] }
r2d2 = "0.8.5"
serde_derive="1.0.99"
serde_json="1.0.40"
serde="1.0.99"
jsonwebtoken = "6.0.1" 

derive_more = "0.15.0"
regex = "1.2.1"
lazy_static = "1.4.0"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
deunicode = "1.0.0"
bcrypt = "0.5.0"
chrono = { version = "0.4.7", features = ["serde"] }
log = "0.4.8"
fern = "0.5.8"
dotenv = "0.14.1"
base64 = "0.10.1"
num_cpus = "1.10.1"

reqwest = "0.9.20"
scraper = "0.10.1"

# openssl = "0.10.20"
