[package]
name = "rut-server-rust"
version = "0.1.0"
edition = "2018"
authors = ["DLuo"]

[[test]]
name = "tests"
path = "tests/lib.rs"

[dependencies]
futures = "0.1.29"
actix = "0.8.3"
actix-rt = "0.2.5"
actix-web = "1.0.9"
actix-cors = "0.1.0"
diesel = { version = "1.4.3", features = ["postgres","chrono","serde_json","uuidv07","r2d2"] }
r2d2 = "0.8.7"
serde_derive="1.0.103"
serde_json="1.0.44"
serde="1.0.103"
jsonwebtoken = "6.0.1" 

derive_more = "0.99.2"
regex = "1.3.1"
lazy_static = "1.4.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
deunicode = "1.0.0"
bcrypt = "0.6.1"
chrono = { version = "0.4.10", features = ["serde"] }
log = "0.4.8"
fern = "0.5.9"
dotenv = "0.15.0"
base64 = "0.11.0"
num_cpus = "1.11.1"

reqwest = "0.9.24"
scraper = "0.11.0"

# openssl = "0.10.20"
